# Mediatag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Mediatag-Windows.spec  Mediatag.spec  README.md  mediatag_app.py  movie_cover_tagger_app.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml
assets/: icon.icns
src/mediatag/: __init__.py  config.py  gui_app.py  media.py  models.py  parser.py  pipeline.py  tmdb.py
src/mediatag/gui/: index.html  script.js  style.css
src/movie_cover_tagger/: __init__.py  cli.py  config.py  gui_app.py  pipeline.py  tmdb.py
src/movie_cover_tagger/gui/: index.html  script.js  style.css
tests/: test_media_integration.py  test_parser.py  test_pipeline.py  test_tmdb.py  test_tmdb_live.py
